# poc-template

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
