[project]
name = "poc-template"
version = "0.1.0"
description = "POC template"
readme = "README.md"
requires-python = ">3.11.0,<3.12.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "dynaconf (>=3.2.12,<4.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)"
]
